Fix title clipping on iPhone SE guest screen

--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ input {
 .section-title {
   margin: 0;
   font-size: 2rem;
-  line-height: 1;
+  line-height: 1.12;
+  padding-top: 0.04em;
 }
 
 .section-title--small {
